--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <header>
+        <h1>Buscador de series</h1>
+    </header>
+    <div>
+        <input type="text" class="js-search" placeholder="Buscar...">
+        <button class="js-button">Buscar</button>
+    </div>
     
+    <main>
+
+        <ul class="js-list"></ul>
+    </main>
 
 <script src="./js/main.js"></script>
 </body>
