--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div>
         <input type="text" class="js-search" placeholder="Buscar...">
         <button class="js-button">Buscar</button>
+        <button type="reset" class="">Reset</button>
     </div>
     
     <main>
-
-        <ul class="js-list"></ul>
+        <ul class="list js-list"></ul>
     </main>
 
 <script src="./js/main.js"></script>
