--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </div>
     
     <main>
-        <ul class="list js-list"></ul>
+        <div class="anime-container"> 
+            <ul class="list js-favorites-list"></ul>
+            <ul class="list js-list"></ul>
+        </div>
     </main>
 
 <script src="./js/main.js"></script>
