Bonus 5 Reset OK

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="search-container">
         <input type="text" class="js-search input" placeholder="Escribe tu anime...">
         <button class="js-button btn-search">Buscar 🉐</button>
-        <button type="reset" class="btn-reset">Reset 💥</button>
+        <button type="reset" class="btn-reset js-reset">Reset 💥</button>
     </div>
     
     <main>
