--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" type="image/x-icon" href="/images/japo.svg">
+    <link rel="icon" type="image/svg+xml" href="images/japo.svg">
 </head>
 <body>
     <header>
