--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 <body>
     <header>
-        <h1 class="h1">Buscador de series anime</h1>
+        <h1 class="h1">Anime Favorites Manager 💬</h1>
+        <h2 class="h1">Buscador de series anime 🔎</h2>
     </header>
     <div class="search-container">
         <input type="text" class="js-search input" placeholder="Escribe tu anime...">
